kubernetes/kubernetes/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app-idwall
spec:
  replicas: 3
  selector:
    matchLabels:
      app: idwall-app
  template:
    metadata:
      labels:
        app: idwall-app
    spec:
      containers:
      - name: idwall-app-teste-tecnico
        image: amandanascimento/idwall-app-teste-tecnico:latest
        ports:
        - containerPort: 80
