kubernetes/kubernetes/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idwall-service
spec:
  selector:
    app: idwall-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
